# distributed-idps-solution

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.raspi.yml  docker-compose.vps.yml  package-lock.json  package.json  setup-raspi.sh
.claude/: settings.local.json
config/tls/: README.md
docs/: ARCHITECTURE.md  BACKLOG.md  DEVELOPMENT.md  OPERATIONS.md  PI_BRIDGE_SETUP.md  PROJECT_STRUCTURE.md  README.md  SETUP.md  TODO.md
ops/: README.md
ops/config/nginx/: docs.conf  pi-nginx.conf
ops/monitoring/: prometheus.yml
ops/monitoring/grafana/dashboards/: idps-overview.json
ops/scripts/: deploy-distributed.sh  deploy-raspi.sh  deploy-vps.sh  deploy.sh  mongo-distributed-init.js
ops/scripts/maintenance/: backup-database.sh  cleanup-logs.sh  ddos-emergency.sh  ddos-resilience.sh  docker-monitor.sh  nuclei-scanner.py  run-scheduled-scans.sh  setup-logs.sh
ops/scripts/security/: firewall.sh
ops/scripts/setup/: nuclei-scanner.py  setup-logs.sh
scripts/: README.md
scripts/deployment/: deploy-raspi-vps.sh  deploy-vps.sh
src/: README.md
src/services/cloud/: README.md
src/services/cloud/api-gateway/: Cargo.toml  Dockerfile
src/services/cloud/api-gateway/src/: main.rs
src/services/cloud/log-processor/: Cargo.toml  Dockerfile
src/services/cloud/log-processor/src/: main.rs
src/services/cloud/packet-analyzer/: Cargo.toml  Dockerfile
src/services/cloud/packet-analyzer/src/: main.rs
src/services/cloud/rule-generator/: Cargo.toml
src/services/cloud/rule-generator/src/: lib.rs
src/services/cloud/threat-intel/: Cargo.toml  Dockerfile
src/services/cloud/threat-intel/src/: lib.rs  main.rs
src/services/cloud/vps-processor/: Cargo.toml  Dockerfile
src/services/cloud/vps-processor/src/: main.rs
src/services/edge/: README.md
src/services/edge/ids-pi/: Dockerfile  app.py  requirements.txt
src/shared/: README.md
src/shared/config/src/: lib.rs
src/shared/protocols/src/: lib.rs
src/shared/utils/src/: lib.rs
src/tools/: README.md
src/tools/dashboard/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
src/tools/dashboard/src/: index.html
src/tools/dashboard/src/app/: app.component.ts  app.config.ts  app.routes.ts
src/tools/dashboard/src/app/pages/dashboard/idps/: idps.component.css  idps.component.html  idps.component.ts
src/tools/dashboard/src/app/pages/other-page/not-found/: not-found.component.html
src/tools/dashboard/src/app/pages/settings/: settings.component.css  settings.component.html  settings.component.ts
src/tools/dashboard/src/app/shared/components/auth/signin-form/: signin-form.component.html  signin-form.component.ts
src/tools/dashboard/src/app/shared/components/ecommerce/create-invoice/invoice-preview-modal/: invoice-preview-modal.component.html
src/tools/dashboard/src/app/shared/components/form/form-elements/input-states/: input-states.component.ts
src/tools/dashboard/src/app/shared/components/header/user-dropdown/: user-dropdown.component.html  user-dropdown.component.ts
src/tools/dashboard/src/app/shared/components/invoice/invoice-main/: invoice-main.component.html
src/tools/dashboard/src/app/shared/components/transactions/order-history/: order-history.component.html
src/tools/dashboard/src/app/shared/components/ui-example/faqs-example/faqs-one/: faqs-one.component.ts
src/tools/dashboard/src/app/shared/components/ui-example/faqs-example/faqs-three/: faqs-three.component.html
src/tools/dashboard/src/app/shared/components/ui-example/faqs-example/faqs-two/: faqs-two.component.ts
src/tools/dashboard/src/app/shared/components/user-profile/user-info-card/: user-info-card.component.ts
src/tools/dashboard/src/app/shared/components/user-profile/user-meta-card/: user-meta-card.component.ts
src/tools/dashboard/src/app/shared/guards/: auth.guard.ts
src/tools/dashboard/src/app/shared/interceptors/: api-key.interceptor.ts
src/tools/dashboard/src/app/shared/layout/app-header/: app-header.component.html
src/tools/dashboard/src/app/shared/layout/app-layout/: app-layout.component.html  app-layout.component.ts
src/tools/dashboard/src/app/shared/layout/app-sidebar/: app-sidebar.component.html  app-sidebar.component.ts
src/tools/dashboard/src/app/shared/layout/auth-page-layout/: auth-page-layout.component.html
src/tools/dashboard/src/app/shared/services/: api.service.ts  auth.service.ts  websocket.service.ts
src/tools/dashboard/src/environments/: environment.prod.ts  environment.ts
tests/integration/: flow-test.sh
