[package]
name = "idps-packet-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
mongodb = { workspace = true }
redis = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }

# Service-specific dependencies
warp = "0.3"
tokio-tungstenite = "0.26"
env_logger = "0.11"

# Shared libraries
idps-types = { path = "../../../shared/types" }
idps-protocols = { path = "../../../shared/protocols" }
idps-utils = { path = "../../../shared/utils" }
